6 June 2019: Wouter
	- Move to github, at https://github.com/NLnetLabs/dnssec-trigger
	- Added .gitignore.
	- Move iterator declarations out of for statement.

17 January 2019: Wouter
	- Fix to remove keys that are too small during
	  dnssec-trigger-control-setup to avoid openssl failing on the small
	  keys.  It then generates new (longer) keys.  Patch from Diane Trout.
	- Fix #4218: do not free zone added to forward zones in
	  update_connection_zones().

16 January 2019: Wouter
	- Fix for #4218: zero string allocation to stop crashes.

14 January 2019: Wouter
	- Fix #4217: dnssec-trigger-script can abort with a KeyError in a
	  misconfigured network.
	- Fix for #4218: segfault in dnssec-triggerd when laptop was
	  multihomed with differing dns settings.

20 August 2018: Wouter
	- Fix spelling inconsistency on Windows in the installer.

25 June 2018: Wouter
	- Release 0.17.
	- trunk is 0.18 in development.

22 June 2018: Wouter
	- Fix for infinite loop in update_connection_zones.

21 June 2018: Wouter
	- Release 0.16.
	- trunk is 0.17 in development.

14 June 2018: Wouter
	- Add check on shell commandline arguments, to make sure domain names
	  and IP addresses passed to it do not contain escape characters.

7 June 2018: Wouter
	- Fix that update_connection_zones does not use item after free.
	- Fix declare before code warnings.
	- Use pclose for popen fds.
	- Use snprintf instead of sprintf to fixed buffer.
	- Fix gcc buffer size for snprintf warning (in dnssec-trigger update
	  code, not the patch set from 14may).

23 May 2018: Wouter
	- string_list, sprint with null termination and correct buffer check.

18 May 2018: Wouter
	- More review fixes, store.c, error log and fixup of getline return,
	  and not variable use before declaration.  Spelling, strdup,
	  bool removal for portability.  Removed unsigned comparison warning.

14 May 2018: Wouter
	- Patch set from Martin Sehnoutka,
	  It migrates the functionality currently provided by the script