@@ -2,7 +2,6 @@
 #include <stdarg.h>
 #include <stddef.h>
 #include <setjmp.h>
-#include <cmocka.h>
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -58,34 +57,40 @@ char *json =
 "\n    ]"
 "\n}\n";
 
-/* A test case that does nothing and succeeds. */
-static void null_test_success(void **state) {
-    (void) state; /* unused */
+#define assert_true(x) assert_true_fp((x), __FILE__, __LINE__)
+static void assert_true_fp(int x, const char* f, int l)
+{
+	assert(x);
+	if(!x) {
+		printf("%s:%d: assert_true failed\n", f, l);
+		exit(1);
+	}
 }
 
-static void load_json_into_list_and_test_length(void **state) {
+/* A test case that does nothing and succeeds. */
+static void null_test_success(void) {
+}
+
+static void load_json_into_list_and_test_length(void) {
     struct nm_connection_list l = yield_connections_from_json(json);
     assert_true(nm_connection_list_length(&l) == 3);
     nm_connection_list_clear(&l);
-    (void) state; /* unused */
 }
 
-static void filter_connection_list_and_test_length0(void **state) {
+static void filter_connection_list_and_test_length0(void) {
     struct nm_connection_list l = yield_connections_from_json(json);
     struct nm_connection_list l2 = nm_connection_list_filter(&l, 0);
     assert_true(nm_connection_list_length(&l2) == 3);
     nm_connection_list_clear(&l2);
     nm_connection_list_clear(&l);
-    (void) state; /* unused */
 }
 
-static void filter_connection_list_and_test_length1(void **state) {
+static void filter_connection_list_and_test_length1(void) {
     struct nm_connection_list l = yield_connections_from_json(json);
     struct nm_connection_list l2 = nm_connection_list_filter(&l, 1, &nm_connection_filter_type_vpn);
     assert_true(nm_connection_list_length(&l2) == 1);
     nm_connection_list_clear(&l2);
     nm_connection_list_clear(&l);
-    (void) state; /* unused */
 }
 
 int main() {
@@ -116,11 +121,24 @@ int main() {
     // free(buffer);
     // nm_connection_list_clear(&l);
 
-    const struct CMUnitTest tests[] = {
-        cmocka_unit_test(null_test_success),
-        cmocka_unit_test(load_json_into_list_and_test_length),
-        cmocka_unit_test(filter_connection_list_and_test_length0),
-        cmocka_unit_test(filter_connection_list_and_test_length1),
-    };
-    return cmocka_run_group_tests(tests, NULL, NULL);
+    /* run tests */
+    printf("null_test_success: ");
+    null_test_success();
+    printf("OK\n");
+
+    printf("load_json_into_list_and_test_length: ");
+    load_json_into_list_and_test_length();
+    printf("OK\n");
+
+    printf("filter_connection_list_and_test_length0: ");
+    filter_connection_list_and_test_length0();
+    printf("OK\n");
+
+    printf("filter_connection_list_and_test_length1: ");
+    filter_connection_list_and_test_length1();
+    printf("OK\n");
+
+    printf("\n");
+    printf("OK\n");
+    return 0;
 }
